--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sahil Poftfolio</title>
     <link rel="shortcut icon" href="./assets/img/favicon-300x287.png" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0aa3bfc3c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
