--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sahil Poftfolio</title>
-    <link rel="shortcut icon" href="./assets/img/favicon-300x287.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon-300x287.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/0aa3bfc3c2.js" crossorigin="anonymous"></script>
 </head>
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="./assets/img/photo.jpg">
+                    <img src="img/photo.jpg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -80,7 +80,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src=".//assets/img/work 1.jpg">
+                    <img src="img/work 1.jpg">
                     <div class="layer">
                         <h3>Movie Ticket</h3>
                         <p>Online Movie Ticket Booking Sysytem Using HTML,&nbsp;CSS,&nbsp;JS,&nbsp;BOOTSTRAP</p>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src=".//assets/img/work 2.png">
+                    <img src="img/work 2.png">
                     <div class="layer">
                         <h3>Amazon Prime Clone</h3>
                         <p>Prime Clone Website Design using HTML and CSS.</p>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./assets/img/work 3.jpg">
+                    <img src="img/work 3.jpg">
                     <div class="layer">
                         <h3>BMI Calculator</h3>
                         <p>Website (Using Html,&nbsp;CSS and JavaScript) to calculat Body Mass Index (BMI).</p>
@@ -123,7 +123,7 @@
                         <a href="https://www.facebook.com/sahil.thipe"><i class="fa fa-facebook"></i></a>
                         <a href="tel:+91 7741969328"><i class="fa fa-square-phone"></i></a>
                     </div>
-                    <a class="btn btn2 btn-primary btn-lg" href="./assets/pdf/SAHIL_RESUME.pdf" download>Download CV</a>
+                    <a class="btn btn2 btn-primary btn-lg" href="pdf/SAHIL_RESUME.pdf" download>Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form action="" name="Contact-Us">
